Bug 1101978 Don't overload strings

--- a/sk/suite/chrome/common/notification.properties
+++ b/sk/suite/chrome/common/notification.properties
@@ -16,6 +16,8 @@ carbonfailurepluginsMessage.button.label=Reštartovať v 32-bitovom režime
 carbonfailurepluginsMessage.button.accesskey=R
 
 missingpluginsMessage.title=Aby sa zobrazili všetky médiá na tejto stránke, sú požadované prídavné zásuvné moduly.
+missingpluginsMessage.button.label=Nastavenia
+missingpluginsMessage.button.accesskey=N
 
 blockedpluginsMessage.title=Niektoré zásuvné moduly, ktoré táto stránka vyžaduje, boli kvôli ochrane zablokované.
 blockedpluginsMessage.infoButton.label=Podrobnosti…
