--- a/sk/browser/chrome/browser/devtools/netmonitor.properties
+++ b/sk/browser/chrome/browser/devtools/netmonitor.properties
@@ -129,6 +129,11 @@ networkMenu.summary=Jedna požiadavka, #2 kB, #3 s;#1 požiadavky, #2 kB, #3 s;#
 # in the network menu specifying the size of a request (in kilobytes).
 networkMenu.sizeKB=%S kB
 
+# LOCALIZATION NOTE (networkMenu.sizeUnavailable): This is the label displayed
+# in the network menu specifying the transferred size of a request is
+# unavailable.
+networkMenu.sizeUnavailable=—
+
 # LOCALIZATION NOTE (networkMenu.totalMS): This is the label displayed
 # in the network menu specifying the time for a request to finish (in milliseconds).
 networkMenu.totalMS=→ %S ms
