Dom update for aurora 36

--- a/fy-NL/dom/chrome/appstrings.properties
+++ b/fy-NL/dom/chrome/appstrings.properties
@@ -10,7 +10,6 @@ connectionFailure=De ferbining mei %S wurde wegere.
 netInterrupt=De ferbining mei %S is ûnferwachts beëinige. Guon ynformaasje is mooglikerwiis ferstjoert.
 netTimeout=De wachttiid is foarby by it pogen te ferbinen mei %S.
 redirectLoop=De ferwizingslimiet foar dizze URL is te grut wurden. Net yn steat de fersochte side te laden. Dit kin komme troch blokkearre cookies.
-## LOCALIZATION NOTE (confirmRepost): In this item, don't translate "%S"
 confirmRepostPrompt=Om de side te besjen moat de ynformaasje ferstjoert troch %S op 'e nij ferstjoert wurde. Dit sil elke hanneling dy't it formulier útfierde (lykas sykjen of online oankeapen) werhelje.
 resendButton.label=Op 'e nij ferstjoere
 unknownSocketType=Dit dokument kin net werjaan wurde of it moast wêze dat jo de persoanlike befeiligingsbehearder (PSM) ynstallearje. Laad de PSM yn, ynstallearje de PSM en probearje it op 'e nij of nim kontakt op mei jo systeembehearder.
@@ -31,6 +30,6 @@ externalProtocolChkMsg=Unthâld myn kar foar alle links fan dit type
 externalProtocolLaunchBtn=Tapassing starte
 malwareBlocked=It webstee op %S is rapportearre as in fertochte side en is blokkearre op basis fan jo feiligheidsfoarkarren.
 phishingBlocked=It webstee op %S is rapportearre as in webferfalsking, makke om brûkers persoanlike of finansjele ynformaasje jaan te litten.
-cspFrameAncestorBlocked=Dizze side hat in ynhâldsfeilichheidsbelied dy't foarkomt dat it op dizze manier ynboud wurd.
+cspBlocked=Dizze side hat in ynhâldsbefeiligingsbelied dat laden op dizze manier foarkomt.
 corruptedContentError=De side dy't jo probearje te besjen kin net toand wurde omdat der in flater yn de gegevensoerdracht ûntdekt waard.
 remoteXUL=Dizze side brûkt in net-stipe technology dy't standert net mear yn Firefox beskikber is.
