--- a/fy-NL/dom/chrome/security/security.properties
+++ b/fy-NL/dom/chrome/security/security.properties
@@ -10,6 +10,8 @@ CrossSiteRequestBlocked=Cross-Origin Request Blocked: Itselde orizjinele belied 
 InvalidSTSHeaders=De website spesifisearre in ynfalide Strict-Transport-Security kop.
 # LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
 InvalidPKPHeaders=De website spesifisearre in net jildige Public-Key-Pins-header.
+# LOCALIZATION NOTE: Do not translate "SHA-1"
+SHA1Sig=Dizze website makket gebrûk fan in SHA-1-sertifikaat; it wurdt oanrikkemandearre dat jo sertifikaten brûke mei ûndertekeningsalgoritmen dy't hashfunksjes sterker as SHA-1 brûke.
 InsecurePasswordsPresentOnPage=Wachtwurdfjild oanwêzich op in ûnfeilge (http://) side. Dit is in feilichheidsrisiko dat it stellen fan brûkers-logynreferinsjes tastiet.
 InsecureFormActionPasswordsPresent=Wachtwurdfjild oanwêzich yn in formulier mei in ûnfeilige (http://) formulieraksje. Dit is in feilichheidsrisiko dat it stellen fan brûkers-logynreferinsjes tastiet.
 InsecurePasswordsPresentOnIframe=Wachtwurdfjild oanwêzich op in ûnfeilch (http://) iframe. Dit is in feilichheidsrisiko dat it stellen fan brûkers-logynreferinsjes tastiet.
