--- a/fy-NL/dom/chrome/dom/dom.properties
+++ b/fy-NL/dom/chrome/dom/dom.properties
@@ -209,3 +209,5 @@ KeyNameZoomWarning=KeyboardEvent.key-wearde “Zoom” is ferâldere en sil omne
 KeyNameDeadKeysWarning=KeyboardEvent.key-weardes dy't starte mei “Dead” binne ferâlere en wurde gearfoege ta “Dead". Sjoch https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key foar mear ynformaasje
 ImportXULIntoContentWarning=XUL-noades ymportearjen yn in ynhâldsdokumint wurdt net mear stipe. Dizze funksjonaliteit sil ynkoarten ferwidere wurde.
 XMLDocumentLoadPrincipalMismatch=Gebrûk fan document.load is ferbean troch dokuminten út oare finsters. Allinnich it finster yn hokker it dokumint makke is mei call.load oanroppen wurde foar dat dokumint. Brûk yn stee dêrfan leaver XMLHttpRequest.
+# LOCALIZATION NOTE: Do not translate "IndexedDB".
+IndexedDBTransactionAbortNavigation=In net foltôge IndexedDB-transaksje is ôfbrutsen fanwege sidenavigaasje.
