updated latvian translation

--- a/lv/toolkit/chrome/global/aboutSupport.properties
+++ b/lv/toolkit/chrome/global/aboutSupport.properties
@@ -63,3 +63,7 @@ blockedOSVersion = Bloķēts jūsu operētājsistēmas versijai.
 
 minLibVersions = Gaidītā minimālā versija
 loadedLibVersions = Izmantotā versija
+
+hasSeccompBPF = Seccomp-BPF (Sistēmas izsaukumu filtrešana)
+canSandboxContent = Satura apstrādes ierobešošana
+canSandboxMedia = Mediju spraudņu ierobežošana
