--- a/lv/toolkit/chrome/global/aboutTelemetry.properties
+++ b/lv/toolkit/chrome/global/aboutTelemetry.properties
@@ -12,6 +12,11 @@ slowSqlAverage = Vid. laiks (ms)
 
 slowSqlStatement = Vaicājums
 
+generalDataHeadingName = Nosaukums
+
+generalDataHeadingValue = Vērtība
+
+
 # Note to translators: Please leave the %S specifiers in the translated string.
 # They will be replaced with values programmaticaly, e.g. "Hang Report #3 (5 seconds)"
 # - The first %S will be replaced with the number of the hang
