security update for aurora 36

--- a/fy-NL/security/manager/chrome/pippki/pippki.properties
+++ b/fy-NL/security/manager/chrome/pippki/pippki.properties
@@ -72,19 +72,15 @@ pageInfo_ViewCertificate=Befeiligingssertifikaat werjaan dat de ydentiteit fan d
 pageInfo_NoEncryption=Net-befeilige ferbining
 pageInfo_Privacy_None1=It webstee %S stipet gjin kodearring foar de side dy't jo besjen.
 pageInfo_Privacy_None2=Ynformaasje dy't sûnder kodearring oer it ynternet ferstjoert wurdt kin tiidens de oerdracht sjen wurde troch oare persoanen.
-pageInfo_Privacy_None3=De side dy't jo besjen is net befeilige.
-# LOCALIZATION NOTE (pageInfo_StrongEncryptionWithBits): %1$S is the name of the encryption standard,
+pageInfo_Privacy_None3=De side dy't jo besjogge is net befeilige.
+# LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
-pageInfo_StrongEncryptionWithBits=Fersifere ferbining: hege graad fan kodearring (%1$S, %2$S-bitkeys)
-pageInfo_Privacy_Strong1=De side dy't jo besjen wie befeilige foardat hy oer it ynternet ferstjoerd wurde.
-pageInfo_Privacy_Strong2=Kodearring makket it erg moeilijk foar ûnbefoegde persoanen om ynformaasje te besjen dy't tusken kompjûters útwiksele wurd. It is derom erg ûnwarskynlik dat iemand dizze side lêzen hat wylst hy oer it netwurk ferstjoerd wurde.
-# LOCALIZATION NOTE (pageInfo_WeakEncryptionWithBits): %1$S is the name of the encryption standard,
-# %2$S is the key size of the cipher.
-pageInfo_WeakEncryptionWithBits=Fersifere ferbining: lege graad fan kodearring (%1$S, %2$S-bitkeys)
-pageInfo_Privacy_Weak1=It webstee %S brûkt in lege graad fan kodearring foar de side dy't jo besjen.
-pageInfo_Privacy_Weak2=In lege graad fan kodearring kin guon ûnbefoegde persoanen in steat stelle dizze ynformatasje te besjen.
-pageInfo_MixedContent=Foar in part befeilige ferbining
-pageInfo_Privacy_Mixed1=Dielen fan de side dy't jo besjen wiene net kodearre foardat se oer it ynternet ferstjoerd wurden. 
+# %3$S is protocol version like "SSL 3" or "TLS 1.2"
+pageInfo_EncryptionWithBitsAndProtocol=Fersifere ferbining (%1$S, %2$S-bits kaaien, %3$S)
+pageInfo_Privacy_Encrypted1=De side dy't jo besjogge is fersifere foardat dizze oer it ynternet ferstjoerd waard.
+pageInfo_Privacy_Encrypted2=Fersifering makket it swier foar persoanen sûnder foech om ynformaasje te besjen dy't tusken kompjûters útwiksele wurdt. It is dêrom net wierskynlik dat ien dizze side lêzen hat wylst dit oer it netwurk ferstjoerd waard.
+pageInfo_MixedContent=Foar in part fersisere ferbining
+pageInfo_Privacy_Broken1=Dielen fan de side dy't jo besjen binne net fersifere of de fersifering wie net sterk genôch foardat dizze oer it ynternet ferstjoerd waard.
 
 #Cert Viewer
 certDetails=Sertifikaatwerjefte:
@@ -151,17 +147,17 @@ writeFileUnknownError=Unbekende flater
 addExceptionBrandedWarning2=Jo steane op it punt om hoe't %S dizze side identifisearet te oerskriuwen.
 addExceptionInvalidHeader=Dizze side probearret om sichsels te identifisearjen mei foute ynformaasje
 addExceptionDomainMismatchShort=Foute Webstee
-addExceptionDomainMismatchLong=Sertifikaat heart by in oare webstee, wat wize kin op identiteitsstellerij.
+addExceptionDomainMismatchLong2=It sertifikaat heart ta oan in oare website, wat betsjutte kin dat ien dizze website probearret nei te meitsjen.
 addExceptionExpiredShort=Alde Ynformaasje
-addExceptionExpiredLong=Sertifikaat is no net falide. It is net mooglik om te kontrolearjen oft dizze identiteit rapporteare is as stellen of ferdwûn.
+addExceptionExpiredLong2=It sertifikaat is op dit stuit net jildich. It kin stellen wêze of fermist en kin troch ien brûkt wurde om dizze website nei te meitsjen.
 addExceptionUnverifiedOrBadSignatureShort=Unbekende identiteit
-addExceptionUnverifiedOrBadSignatureLong=Sertifikaat is net fertroud, omdat it net ferifiearre is troch in bekende autoriteit mei in feilige signatuer.
-addExceptionValidShort=Goed sertifikaat
+addExceptionUnverifiedOrBadSignatureLong2=It sertifikaat wurdt net fertroud, omdat it net ferifiearre en útjûn is troch in fertroude autoriteit fia in befeilige ûndertekening.
+addExceptionValidShort=Jildich sertifikaat
 addExceptionValidLong=Dizze webstee jout falide, ferifiearre identifikaasje.  It is net nedich om in útsûndering ta te foegjen.
 addExceptionCheckingShort=Kontroleart ynformaasje
-addExceptionCheckingLong=Probeart om it webstee te identifisearjen...
+addExceptionCheckingLong2=Poging ta identifikaasje fan dizze website…
 addExceptionNoCertShort=Gjin ynformaasje beskikber
-addExceptionNoCertLong=Net yn steat om identifikaasje steat te krijen foar it webstee.
+addExceptionNoCertLong2=Identifikaasjesteat fan dizze website is net te krijen.
 addExceptionConnectionFailed=Ferbining mislearre
 
 #Certificate Exists in database
