toolkit update for aurora 36

--- a/fy-NL/toolkit/chrome/global/aboutSupport.properties
+++ b/fy-NL/toolkit/chrome/global/aboutSupport.properties
@@ -82,3 +82,7 @@ webglRenderer = WebGL Renderer
 
 minLibVersions = Minimale ferzje ferwachte
 loadedLibVersions = Brûkte ferzje
+
+hasSeccompBPF = Seccomp-BPF (Systeemoanropfiltering)
+canSandboxContent = Ynhâldsproses-sandboxing
+canSandboxMedia = Mediaynstekker-sandboxing
