--- a/fy-NL/toolkit/chrome/global/aboutTelemetry.properties
+++ b/fy-NL/toolkit/chrome/global/aboutTelemetry.properties
@@ -7,6 +7,10 @@
 # - %2$S will be replaced with the value of the toolkit.telemetry.server_owner preference
 pageSubtitle = Dizze side toant de ynformaasje oer prestaasje, hardware, gebrûk en oanpassingen sammele troch Telemetry. Dizze ynformaasje wurdt ferstjoerd nei %1$S om %2$S te ferbetterjen.
 
+generalDataHeadingName = Namme
+
+generalDataHeadingValue = Wearde
+
 slowSqlMain = Trage SQL-statements op Main Thread
 
 slowSqlOther = Trage SQL-statements op Helper Threads
