browser update 1 for aurora 36

--- a/fy-NL/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/fy-NL/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -99,8 +99,8 @@ quit-button.tooltiptext.linux2 = %1$S ôfslute (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = %1$S ôfslute (%2$S)
 
-loop-call-button2.label = In petear starte
-loop-call-button2.tooltiptext = In petear starte
+loop-call-button3.label = Hello
+loop-call-button3.tooltiptext = In petear starte
 
 social-share-button.label = Dizze side diele
 social-share-button.tooltiptext = Dizze side diele
@@ -113,5 +113,5 @@ web-apps-button.tooltiptext = Apps ûntdekke
 
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
-devtools-webide-button.label = WebIDE
-devtools-webide-button.tooltiptext = WebIDE iepenje
+devtools-webide-button2.label = WebIDE
+devtools-webide-button2.tooltiptext = WebIDE iepenje (%S)
