--- a/fy-NL/browser/chrome/browser/browser.properties
+++ b/fy-NL/browser/chrome/browser/browser.properties
@@ -295,7 +295,7 @@ identity.identified.verified_by_you=Jo hawwe in feilichheidsútsûndering tafoeg
 identity.identified.state_and_country=%S, %S
 
 identity.encrypted2=De ferbining nei dizze webstee is feilich.
-identity.mixed_display_loaded=De ferbining nei dizze website is net folslein feilich, omdat it net fersifere eleminten (lykas ôfbyldingen) befettet.
+identity.broken_loaded=De ferbining mei dizze website is net folslein befeilige, omdat dizze net-fersifere eleminten befettet (lykas ôfbyldingen) of de fersifering net sterk genôch is.
 identity.mixed_active_loaded2=Dizze website befeettet ynteraktive ynhâld dy't net fersifere is (lykas skripts). Oare minsken kinne jo ynformaasje sjen of it gedrach fan de website bewurkje.
 identity.unencrypted=Jo ferbining nei dizze website is net fersifere.
 
