browser update 2 for aurora 36

--- a/fy-NL/browser/chrome/browser/devtools/gclicommands.properties
+++ b/fy-NL/browser/chrome/browser/devtools/gclicommands.properties
@@ -20,6 +20,10 @@ helpDesc=Help krije oer de beskikbere opdracht
 # explain the contents of the command help table.
 helpAvailable=Beskikbere opdrachten
 
+# LOCALIZATION NOTE (notAvailableInE10S) Used in the output of any command that
+# is not compatible with multiprocess mode (E10S).
+notAvailableInE10S=De opdracht ‘%1$S’ is net beskikber yn multiproses-moadus (E10S)
+
 # LOCALIZATION NOTE (consoleDesc) A very short string used to describe the
 # function of the console command.
 consoleDesc=opdrachten om de konsole te behearen
