--- a/fy-NL/browser/chrome/browser/devtools/webide.properties
+++ b/fy-NL/browser/chrome/browser/devtools/webide.properties
@@ -42,6 +42,8 @@ error_cantConnectToApp=Kin net ferbine mei app: %1$S
 # Variable: error message (in english)
 error_cantFetchAddonsJSON=Kin de add-onlist net ophelje: %S
 
+error_appProjectsLoadFailed=Kin projektenlist net lade. Dit kin barre as jo dit profyl mei in nijere ferzje fan Firefox brûkt hawwe.
+
 addons_stable=stabyl
 addons_unstable=Net stabyl
 # LOCALIZATION NOTE (addons_simulator_label): This label is shown as the name of
@@ -52,6 +54,7 @@ addons_simulator_label=Firefox OS %1$S-simulator (%2$S)
 addons_install_button=ynstallearje
 addons_uninstall_button=de-ynstallearje
 addons_adb_label=ADB Helper-add-on
+addons_adapters_label=Tools Adapters-add-on
 addons_adb_warning=USB-apparaten wurde sûnder dizze add-on net detektearre
 addons_status_unknown=?
 addons_status_installed=Ynstallearre
@@ -71,3 +74,6 @@ status_valid=JILDICH
 status_warning=WARSKÔGINGEN
 status_error=FLATERS
 status_unknown=ÛNBEKEND
+
+# Preferences
+devicepreferences_reset_default=Standertwearden
