--- a/fy-NL/browser/chrome/browser/shellservice.properties
+++ b/fy-NL/browser/chrome/browser/shellservice.properties
@@ -17,6 +17,12 @@ setDefaultBrowserNotNow.accesskey  = N
 setDefaultBrowserNever.label       = Freegje my net wer
 setDefaultBrowserNever.accesskey   = F
 
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# These strings are used as an alternative to the ones above, in a modal dialog.
+# %S will be replaced by brandShortName
+setDefaultBrowserTitle=Standertbrowser
+setDefaultBrowserMessage=%S is op dit stuit net ynsteld as jo standertbrowser. Wolle jo it jo standertbrowser meitsje?
+setDefaultBrowserDontAsk=Dizze kontrôle altyd útfiere by it starten fan %S
 
 desktopBackgroundLeafNameWin       = buroblêdachtergrûn.bmp
 DesktopBackgroundDownloading       = Ofbylding bewarje…
