--- a/fy-NL/browser/chrome/overrides/appstrings.properties
+++ b/fy-NL/browser/chrome/overrides/appstrings.properties
@@ -31,6 +31,6 @@ externalProtocolChkMsg=Unthâld myn kar foar alle links fan dit type
 externalProtocolLaunchBtn=Tapassing starte
 malwareBlocked=It webstee op %S is rapportearre as in fertochte side en is blokkearre op basis fan jo feiligheidsfoarkarren.
 phishingBlocked=It webstee op %S is rapportearre as in webferfalsking, makke om brûkers persoanlike of finansjele ynformaasje jaan te litten.
-cspFrameAncestorBlocked=Dizze side hat in ynhâldsfeilichheidsbelied dy't foarkomt dat it op dizze manier ynboud wurd.
+cspBlocked=Dizze side hat in ynhâldsbefeiligingsbelied dat laden op dizze manier foarkomt.
 corruptedContentError=Dizze side dy't jo probearje te besjen kin net toand wurde omdat der in flater yn de gegevensoerdracht ûntdekt waard.
 remoteXUL=Dizze side brûkt in net-stipe technology dy't standert net mear yn Firefox beskikber is.
