--- a/fy-NL/webapprt/webapprt/overrides/appstrings.properties
+++ b/fy-NL/webapprt/webapprt/overrides/appstrings.properties
@@ -30,6 +30,6 @@ externalProtocolChkMsg=Unthâld myn kar foar alle keppelingen fan dit type.
 externalProtocolLaunchBtn=Applikaasje iepenje
 malwareBlocked=De website op %S is rapportearre as in oanfalsside en is blokkearre basearre op jo feilichheidsfoarkarren.
 phishingBlocked=De website op %S is rapportearre as in webferfalsking, makke om brûkers te ferlieden persoanlike of finansjele ynformaasje te dielen.
-cspFrameAncestorBlocked=Dizze tapassing probearre in boarne te benaderjen dy't in ynhâldsbefeiligingsbelied hat dat opkeart dat de boarne op dizze manier opnommen wurdt.
+cspBlocked=Dizze tapassing hat in boarne probearre te benaderjen dy't in ynhâldsbefeiligingsbelied kent dat laden op dizze manier opkeart.
 corruptedContentError=De tapassing kin net trochgean mei laden, omdat der in flater yn de gegevensoerdracht detektearre is.
 remoteXUL=Dizze tapassing probearre in net-stipe technology te brûken dy't net mear beskikber is.
