Bug 1079336 - Updated runtime details to show 'unknown (requires ADB Helper 0.4.0 or later)' in WebIDE properties

--- a/sk/browser/chrome/browser/devtools/webide.properties
+++ b/sk/browser/chrome/browser/devtools/webide.properties
@@ -65,7 +65,7 @@ addons_status_installing=inštaluje sa
 
 runtimedetails_checkno=nie
 runtimedetails_checkyes=áno
-runtimedetails_checkunkown=neznáme
+runtimedetails_checkunknown=neznáme (vyžaduje ADB Helper 0.4.0 alebo novší)
 runtimedetails_notUSBDevice=Nie je zariadenie USB
 
 # Validation status
