some loose ends

--- a/ga-IE/mobile/android/chrome/browser.properties
+++ b/ga-IE/mobile/android/chrome/browser.properties
@@ -391,4 +391,4 @@ feedHandler.subscribeWith=Liostáil le
 # This string is shown in the console when someone uses deprecated NativeWindow apis.
 # %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
 # a file they should import or the name of an api.
-nativeWindow.deprecated=%1$S is deprecated. Please use %2$S instead
+nativeWindow.deprecated=Tá %1$S dulta i léig. Ba chóir duit %2$S a úsáid ina ionad
