[es-MX] update from Pootle (firefox)

--- a/es-MX/browser/chrome/browser/devtools/timeline.properties
+++ b/es-MX/browser/chrome/browser/devtools/timeline.properties
@@ -64,3 +64,4 @@ timeline.markerDetail.DOMEventType=Tipo de evento:
 timeline.markerDetail.DOMEventPhase=Fase:
 timeline.markerDetail.DOMEventTargetPhase=Objetivo
 timeline.markerDetail.DOMEventCapturingPhase=Captura
+timeline.markerDetail.DOMEventBubblingPhase=Burbujeante\u0020
