--- a/es-MX/browser/chrome/browser/loop/loop.properties
+++ b/es-MX/browser/chrome/browser/loop/loop.properties
@@ -287,6 +287,7 @@ feedback_rejoin_button=Volver a unirse
 ## an abusive user.
 feedback_report_user_button=Reportar usuario
 
+help_label=Ayuda
 tour_label=Paseo
 
 ## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
@@ -304,6 +305,8 @@ rooms_list_delete_tooltip=Eliminar conversación
 rooms_list_deleteConfirmation_label=¿Estás seguro?
 rooms_list_no_current_conversations=No hay conversaciones actuales
 rooms_name_this_room_label=Poner un nombre a esta conversación
+rooms_name_this_room_tooltip2=Haz clic para editar el nombre de la conversación
+rooms_name_change_failed_label=No se puede renombrar la conversación
 rooms_new_room_button_label=Iniciar conversación
 rooms_only_occupant_label=Eres el primero aquí.
 rooms_panel_title=Elije una conversación o inicia una nueva
