--- a/fy-NL/browser/chrome/browser/devtools/timeline.properties
+++ b/fy-NL/browser/chrome/browser/devtools/timeline.properties
@@ -38,6 +38,7 @@ timeline.records=OPNAMEN
 timeline.label.styles=Stilen
 timeline.label.reflow=Reflow
 timeline.label.paint=Paint
+timeline.label.javascript=Javascript
 timeline.label.domevent=DOM-barren
 timeline.label.consoleTime=Konsole
 
