--- a/hu/suite/chrome/common/dataman/dataman.properties
+++ b/hu/suite/chrome/common/dataman/dataman.properties
@@ -32,6 +32,7 @@ perm.script.label=Parancsfájlok futtatása
 perm.stylesheet.label=Stíluslapok betöltése
 perm.sts/use.label=Strict Transport Security használata
 perm.sts/subd.label=Strict Transport Security alkalmazása az altartományokra
+perm.trackingprotection.label=Tevékenységek követése
 
 perm.type.default=Válasszon egy típust
 
