Hungarian SeaMonkey update from Aurora channel

--- a/hu/suite/chrome/common/notification.properties
+++ b/hu/suite/chrome/common/notification.properties
@@ -4,7 +4,7 @@
 
 outdatedpluginsMessage.title=Az oldal által használt egyes bővítmények elavultak.
 outdatedpluginsMessage.button.label=Bővítmények frissítése…
-outdatedpluginsMessage.button.accesskey=F
+outdatedpluginsMessage.button.accesskey=f
 
 # LOCALIZATION NOTE (carbonfailurepluginsMessage.title):
 # The English form of this string used to use the word "requires" but it was
@@ -16,25 +16,21 @@ carbonfailurepluginsMessage.button.label=Újraindítás 32 bites módban
 carbonfailurepluginsMessage.button.accesskey=j
 
 missingpluginsMessage.title=Az oldal teljes tartalmának megjelenítéséhez további bővítmények szükségesek.
-missingpluginsMessage.button.label=Hiányzó bővítmények telepítése…
-missingpluginsMessage.button.accesskey=H
 
 blockedpluginsMessage.title=Az oldal megjelenítéséhez szükséges egyes bővítmények tiltva vannak a felhasználó védelme érdekében.
 blockedpluginsMessage.infoButton.label=Részletek…
 blockedpluginsMessage.infoButton.accesskey=R
-blockedpluginsMessage.searchButton.label=Bővítmények frissítése…
-blockedpluginsMessage.searchButton.accesskey=B
 
 crashedpluginsMessage.title=A(z) %S bővítmény összeomlott.
 crashedpluginsMessage.reloadButton.label=Újratöltés
 crashedpluginsMessage.reloadButton.accesskey=j
 crashedpluginsMessage.submitButton.label=Hibajelentés küldése
-crashedpluginsMessage.submitButton.accesskey=E
+crashedpluginsMessage.submitButton.accesskey=e
 crashedpluginsMessage.learnMore=További tudnivalók…
 
 activatepluginsMessage.title=Kívánja aktiválni a bővítményeket ezen az oldalon?
 activatepluginsMessage.activate.label=Bővítmények aktiválása
-activatepluginsMessage.activate.accesskey=A
+activatepluginsMessage.activate.accesskey=a
 activatepluginsMessage.dismiss.label=Ne aktiválja
 activatepluginsMessage.dismiss.accesskey=N
 activatepluginsMessage.remember=Megjegyzés ehhez a webhelyhez
@@ -54,7 +50,7 @@ pluginInfo.unknownPlugin=Ismeretlen
 # LOCALIZATION NOTE (popupWarning.message): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is brandShortName and #2 is the number of popups blocked.
-popupWarning.message=#1 prevented this website from opening a popup window.;#1 prevented this website from opening #2 popup windows.
+popupWarning.message=#1 megakadályozta, hogy ez a webhely felugró ablakot nyisson meg;A #1 megakadályozta, hogy ez a webhely #2 felugró ablakot nyisson meg.
 popupWarningButton=Beállítások
 popupWarningButton.accesskey=B
 
@@ -184,8 +180,10 @@ updatePromptCheckButton.accesskey=F
 SecurityTitle=Biztonsági figyelmeztetés
 MixedContentMessage=Egy titkosított oldalra fog érni, amely nem titkosított elemeket is tartalmaz. Azokat az információkat, amiket mostantól lát vagy küld, könnyen olvashatja egy harmadik személy.
 MixedActiveContentMessage=Egy titkosított oldalra fog érni, amely nem titkosított elemeket is tartalmaz. Azokat az információkat, amiket mostantól lát vagy küld, könnyen olvashatja egy harmadik személy.
+TrackingContentMessage=Az oldal felhasználói aktivitás követésére alkalmas elemeket tartalmazhat.
 MixedDisplayContentMessage=Egy titkosított oldalra fog érni, amely részben titkosított elemeket tartalmaz, így nem nem véd meg a lehallgatástól.
 BlockedActiveContentMessage=Az oldalon lévő nem biztonságos elemeket le lettek tiltva.
+BlockedTrackingContentMessage=Az oldalon lévő felhasználói aktivitás követésére alkalmas elemei le lettek tiltva.
 BlockedDisplayContentMessage=Az oldalon lévő nem titkosított elemeket le lettek tiltva.
 EnterInsecureMessage=Egy titkosított oldal elhagyására készül. Azokat az információkat, amiket mostantól küld, könnyen olvashatja egy harmadik személy.
 EnterSecureMessage=Egy titkosított oldalra fog érni. A weboldal azonosítása megtörtént, és az ezután megjelenő, illetve Ön által beírt információ nehezen hozzáférhető harmadik fél számára.
