[es-MX] update from Pootle (firefox)

--- a/es-MX/dom/chrome/layout/css.properties
+++ b/es-MX/dom/chrome/layout/css.properties
@@ -106,6 +106,9 @@ PEColorSaturationEOF=saturación
 PEColorLightnessEOF=luz
 PEColorOpacityEOF=opacidad en valor del color
 PEExpectedNumber=Se esperaba un número, pero se encontró '%1$S'.
+PEPositionEOF=<position>
+PEExpectedPosition=Se esperaba <position>, pero se encontró '%1$S'.
+PEExpectedRadius=Se esperaba radio, pero se encontró '%1$S'.
 PEExpectedCloseParen=Se esperaba ')', pero se encontró '%1$S'.
 PEDeclEndEOF=';' para '}' terminar la declaración
 PEParseDeclarationNoColon=Se esperaba ':', pero se encontró '%1$S'.
