--- a/es-MX/browser/chrome/browser/loop/loop.properties
+++ b/es-MX/browser/chrome/browser/loop/loop.properties
@@ -315,3 +315,4 @@ rooms_room_full_call_to_action_nonFx_label=Descarga {{brandShortname}} para inic
 rooms_room_full_call_to_action_label=Saber más acerca de {{clientShortname}} »
 rooms_room_joined_label=¡Alguien se ha unido a la conversación!
 rooms_room_join_label=Unirse a la conversación
+rooms_signout_alert=Las conversaciones abiertas se cerrarán
