--- a/pt-BR/suite/chrome/common/downloads/downloadmanager.properties
+++ b/pt-BR/suite/chrome/common/downloads/downloadmanager.properties
@@ -2,12 +2,19 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+paused=Pausado
+downloading=Baixando
+uploading=Enviando
+notStarted=Não iniciado
+failed=Falhou
+blocked=Bloqueado
 
 # LOCALIZATION NOTE (downloadsTitleFiles, downloadsTitlePercent): Semi-colon list of
 # plural forms. See: http://developer.mozilla.org/en/Localization_and_Plurals
 # %1$S number of files; %2$S overall download percent (only for downloadsTitlePercent)
 # %% will appear as a single % sign, so %2$S%% is the percent number plus the % sign
 # examples: 2% of 1 file - Download Manager; 22% of 11 files - Download Manager
+downloadsTitleFiles=%1$S arquivo - Gerenciador de downloads;%1$S arquivos - Gerenciador de downloads
 
 # LOCALIZATION NOTE (progressTitle):
 # %1$S is the file name, %2$S is the download state
@@ -20,11 +27,13 @@ progressTitle=%1$S - %2$S
 
 # LOCALIZATION NOTE (percentFormat): %1$S is download percent
 # %% will appear as a single % sign, so %1$S%% is the percent number plus the % sign
+percentFormat=%1$S%%
 
 # LOCALIZATION NOTE (speedFormat):
 # %1$S rate number; %2$S rate unit
 # units are taken from toolkit's downloads.properties
 # example: 2.2 MB/sec
+speedFormat=%1$S %2$S/seg
 
 # LOCALIZATION NOTE (timeSingle): %1$S time number; %2$S time unit
 # example: 1 minute; 11 hours
@@ -32,12 +41,15 @@ timeSingle=%1$S %2$S
 # LOCALIZATION NOTE (timeDouble):
 # %1$S time number; %2$S time unit; %3$S time sub number; %4$S time sub unit
 # example: 11 hours, 2 minutes; 1 day, 22 hours
+timeDouble=%1$S %2$S, %3$S %4$S
 
 # LOCALIZATION NOTE (timeElapsedSingle): %1$S time number; %2$S time unit
 # example: 1 minute elapsed; 11 hours elapsed
+timeElapsedSingle=%1$S %2$S decorridos
 # LOCALIZATION NOTE (timeElapsedDouble):
 # %1$S time number; %2$S time unit; %3$S time sub number; %4$S time sub unit
 # example: 11 hours, 2 minutes elapsed; 1 day, 22 hours elapsed
+timeElapsedDouble=%1$S %2$S, %3$S %4$S decorridos
 
 # LOCALIZATION NOTE (sizeSpeed):
 # %1$S is transfer progress; %2$S download speed
@@ -50,3 +62,4 @@ sizeSpeed=%1$S (%2$S)
 
 fromSource=De %S
 
+fileExecutableSecurityWarningDontAsk=Não perguntar novamente.
