--- a/pt-BR/suite/chrome/common/feeds/subscribe.properties
+++ b/pt-BR/suite/chrome/common/feeds/subscribe.properties
@@ -2,6 +2,8 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+chooseApplicationMenuItem=Escolher aplicativo…
+chooseApplicationDialogTitle=Escolher aplicativo
 
 # LOCALIZATION NOTE: The next string is for the size of the enclosed media.
 #   e.g. enclosureSizeText : "50.23 MB"
