--- a/es-CL/dom/chrome/security/security.properties
+++ b/es-CL/dom/chrome/security/security.properties
@@ -12,4 +12,5 @@ InsecurePasswordsPresentOnIframe=Campos de contraseña presentes en un iframe in
 LoadingMixedActiveContent=Cargando contenido activo mixto (inseguro) en una página segura "%1$S"
 LoadingMixedDisplayContent=Cargando contenido de muestra mixto (inseguro) en una página segura "%1$S"
 BothAllowScriptsAndSameOriginPresent=Un iframe que tiene tanto allow-scripts como allow-same-origin para su atributo de caja de arena, puede remover su caja de arena.
+WeakProtocolVersionWarning=Este sitio usa el protocolo SSL 3.0 para encriptar, el cual está obsoleto y es inseguro.
 WeakCipherSuiteWarning=Este usa el cifrado RC4 para encriptar, el cual está obsoleto y es inseguro.
