[pt-BR] update from Pootle (seamonkey)

--- a/pt-BR/suite/chrome/common/downloads/downloadmanager.properties
+++ b/pt-BR/suite/chrome/common/downloads/downloadmanager.properties
@@ -62,4 +62,4 @@ sizeSpeed=%1$S (%2$S)
 
 fromSource=De %S
 
-fileExecutableSecurityWarningDontAsk=Não perguntar novamente.
+fileExecutableSecurityWarningDontAsk=Não perguntar de novo
