Hungarian SeaMonkey translation

--- a/hu/suite/chrome/common/notification.properties
+++ b/hu/suite/chrome/common/notification.properties
@@ -16,6 +16,8 @@ carbonfailurepluginsMessage.button.label=Újraindítás 32 bites módban
 carbonfailurepluginsMessage.button.accesskey=j
 
 missingpluginsMessage.title=Az oldal teljes tartalmának megjelenítéséhez további bővítmények szükségesek.
+missingpluginsMessage.button.label=Hiányzó bővítmények telepítése…
+missingpluginsMessage.button.accesskey=H
 
 blockedpluginsMessage.title=Az oldal megjelenítéséhez szükséges egyes bővítmények tiltva vannak a felhasználó védelme érdekében.
 blockedpluginsMessage.infoButton.label=Részletek…
