--- a/hu/suite/chrome/mailnews/charsetTitles.properties
+++ b/hu/suite/chrome/mailnews/charsetTitles.properties
@@ -34,7 +34,6 @@ shift_jis.title = Japán (Shift_JIS)
 euc-jp.title = Japán (EUC-JP)
 big5.title = Hagyományos kínai (Big5)
 big5-hkscs.title = Hagyományos kínai (Big5-HKSCS)
-x-euc-tw.title = Hagyományos kínai (EUC-TW)
 gb2312.title = Egyszerűsített kínai (GB2312)
 hz-gb-2312.title = Egyszerűsített kínai (HZ)
 gbk.title = Egyszerűsített kínai (GBK)
@@ -45,18 +44,17 @@ utf-16.title = Unicode (UTF-16)
 utf-16le.title = Unicode (UTF-16LE)
 utf-16be.title = Unicode (UTF-16BE)
 iso-8859-5.title = Cirill (ISO-8859-5)
-iso-ir-111.title = Cirill (ISO-IR-111)
 windows-1251.title = Cirill (Windows-1251)
 x-mac-cyrillic.title = Cirill (MacCyrillic)
 x-mac-ukrainian.title = Cirill/ukrán (MacUkrainian)
 koi8-r.title = Cirill (KOI8-R)
 koi8-u.title = Cirill/ukrán (KOI8-U)
+iso-8859-6.title = Arab (ISO-8859-6)
 iso-8859-7.title = Görög (ISO-8859-7)
 windows-1253.title = Görög (Windows-1253)
 x-mac-greek.title = Görög (MacGreek)
 windows-1258.title = Vietnami (Windows-1258)
 windows-874.title = Thai (Windows-874)
-ibm874.title = Thai (IBM-874)
 iso-8859-8.title = Héber (vizuális) (ISO-8859-8)
 iso-8859-8-i.title = Héber (ISO-8859-8-I)
 windows-1255.title = Héber (Windows-1255)
