[sl] update from Pootle (thunderbird)

--- a/sl/editor/ui/chrome/composer/editor.properties
+++ b/sl/editor/ui/chrome/composer/editor.properties
@@ -163,14 +163,14 @@ AdvancedEditForCellMsg=Napredno urejanje ni na voljo, če je izbranih več celic
 # LOCALIZATION NOTE (ObjectProperties):Don't translate "%obj%" it will be replaced with one of above object nouns
 ObjectProperties=Lastnosti %obj% …
 # LOCALIZATION NOTE This character must be in the above string and not confict with other accesskeys in Format menu
-ObjectPropertiesAccessKey=o
+ObjectPropertiesAccessKey=e
 # LOCALIZATION NOTE (JoinSelectedCells): This variable should contain the "tableJoinCells.accesskey" 
 # letter as defined in editorOverlay.dtd
 JoinSelectedCells=Združi izbrane celice
 # LOCALIZATION NOTE (JoinCellToRight): This variable should contain the "tableJoinCells.accesskey" 
 # letter as defined in editorOverlay.dtd
 JoinCellToRight=Združi s celico na desni
-JoinCellAccesskey=j
+JoinCellAccesskey=d
 # LOCALIZATION NOTE (TableSelectKey): Ctrl key on a keyboard
 TableSelectKey=Ctrl+
 # LOCALIZATION NOTE (XulKeyMac): Command key on a Mac keyboard
@@ -189,13 +189,13 @@ Unknown=Neznano
 #
 # LOCALIZATION NOTE "RemoveTextStylesAccesskey" is used for both
 #  menu items: "RemoveTextStyles" and "StopTextStyles"
-RemoveTextStylesAccesskey=X
+RemoveTextStylesAccesskey=n
 RemoveTextStyles=Odstrani vse besedilne sloge
-StopTextStyles=Prenehaj besedilne sloge
+StopTextStyles=Prekini besedilne sloge
 #
 # LOCALIZATION NOTE "RemoveLinksAccesskey" is used for both
 #  menu items: "RemoveLinks" and "StopLinks"
-RemoveLinksAccesskey=n
+RemoveLinksAccesskey=r
 RemoveLinks=Odstrani povezave
 StopLinks=Prekini povezavo
 #
