[fa] update from Pootle (firefox)

--- a/fa/dom/chrome/accessibility/AccessFu.properties
+++ b/fa/dom/chrome/accessibility/AccessFu.properties
@@ -13,6 +13,7 @@ alert          =       هشدار
 table          =       جدول
 link           =       پیوند
 pushbutton     =       دکمه
+pagetablist    =       لیست زبانه ها
 passwordtext   =       متن گذرواژه
 imagemap       =       نقشه تصویر
 figure         =       شكل
