[sl] update from Pootle (thunderbird)

--- a/sl/editor/ui/chrome/composer/editor.properties
+++ b/sl/editor/ui/chrome/composer/editor.properties
@@ -191,7 +191,7 @@ Unknown=Neznano
 #  menu items: "RemoveTextStyles" and "StopTextStyles"
 RemoveTextStylesAccesskey=n
 RemoveTextStyles=Odstrani vse besedilne sloge
-StopTextStyles=Prekini besedilne sloge
+StopTextStyles=Prenehaj besedilne sloge
 #
 # LOCALIZATION NOTE "RemoveLinksAccesskey" is used for both
 #  menu items: "RemoveLinks" and "StopLinks"
@@ -200,7 +200,7 @@ RemoveLinks=Odstrani povezave
 StopLinks=Prekini povezavo
 #
 NoFormAction=Priporočljivo je vnesti dejanje za ta obrazec. Samoobjavni obrazci so napredna tehnika, ki ne deluje dosledno v vseh brskalnikih.
-NoAltText=Če je slika pomembna za pomen spletne strani, morate zanjo vnesti nadomestno besedilo, ki se bo izpisalo v besedilnih brskalnikih in ki se bo med nalaganjem slike ali onemogočenim nalaganjem slik izpisalo v ostalih brskalnikih.
+NoAltText=Če je slika pomembna za pomen sporočila, morate zanjo vnesti nadomestno besedilo, ki se bo izpisalo v besedilnih brskalnikih in ki se bo med nalaganjem slike ali onemogočenim nalaganjem slik izpisalo v ostalih brskalnikih.
 #
 Malformed=Vira ni bilo mogoče pretvoriti nazaj v dokument, ker ni v pravilni obliki XHTML.
 NoLinksToCheck=Ni elementov s povezavami, katere bi bilo potrebno preveriti
