[fa] update from Pootle (firefox)

--- a/fa/dom/chrome/accessibility/AccessFu.properties
+++ b/fa/dom/chrome/accessibility/AccessFu.properties
@@ -50,9 +50,11 @@ main           =       اصلی
 # LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
 # Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+tblColumnInfo = به‌وسیله ۱ ستون;به‌وسیله#1 ستون ها
 # LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
 # Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+tblRowInfo = و‌ ۱ردیف;و#1ٰ‌‌ردیف ها\u0020
 
 # table or grid cell information
 columnInfo = ستون%S
@@ -74,6 +76,7 @@ cycleAction    =      چرخه زده
 
 # Live regions
 # 'hidden' will be spoken when something disappears in a live region.
+hidden         =      مخفی
 
 # Tab states
 tabLoading     =      در حال بارگذاری
@@ -116,9 +119,12 @@ quicknav_Table       = جدول‌ها
 quicknav_Checkbox    = جعبه بررسی
 
 # Shortened role names for braille
+tableAbbr          =       tbl
 pushbuttonAbbr     =       btn
+pagetablistAbbr    =       فهرست زبانه‌ها
 passwordtextAbbr   =       passwdtxt
 imagemapAbbr       =       imgmap
+listboxoptionAbbr  =       انتخاب
 figureAbbr         =       fig
 textareaAbbr       =       ناحیه‌ی متن
 
@@ -128,4 +134,10 @@ textareaAbbr       =       ناحیه‌ی متن
 # LOCALIZATION NOTE (tblRowInfoAbbr): Semi-colon list of plural forms.
 # Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+tblRowInfoAbbr = #1r;#1r
+cellInfoAbbr = c%Sr%S
 
+stateCheckedAbbr = (x)
+stateUncheckedAbbr = ( )
+statePressedAbbr = (x)
+stateUnpressedAbbr = ( )
