No bug - Change 'Konsole lÃ¶schen' to 'Konsole leeren'

--- a/de/browser/chrome/browser/devtools/webconsole.properties
+++ b/de/browser/chrome/browser/devtools/webconsole.properties
@@ -26,7 +26,7 @@ tipMutation=Loggen von DOM-Mutations-Ereignissen ein/ausschalten
 btnGlobal=Globale Nachrichten
 tipGlobal=Loggen von globalen Nachrichten ein/ausschalten
 localConsole=Lokale Konsole
-clearConsoleCmd.label=Konsole löschen
+clearConsoleCmd.label=Konsole leeren
 clearConsoleCmd.accesskey=l
 close.button=Schließen
 close.accesskey=c
