--- a/sk/browser/chrome/browser/browser.properties
+++ b/sk/browser/chrome/browser/browser.properties
@@ -371,10 +371,10 @@ safebrowsing.notAnAttackButton.label=Toto nie je škodlivá stránka…
 safebrowsing.notAnAttackButton.accessKey=T
 
 # Ctrl-Tab
-# LOCALIZATION NOTE (ctrlTab.showAll.label): #1 represents the number
+# LOCALIZATION NOTE (ctrlTab.listAllTabs.label): #1 represents the number
 # of tabs in the current browser window. It will always be 2 at least.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-ctrlTab.showAll.label=;Zobraziť všetky #1 karty;Zobraziť všetkých #1 kariet
+ctrlTab.listAllTabs.label=;Zobraziť všetky #1 karty;Zobraziť všetkých #1 kariet
 
 # LOCALIZATION NOTE (addKeywordTitleAutoFill): %S will be replaced by the page's title
 # Used as the bookmark name when saving a keyword for a search field.
