[pt-BR] update from Pootle (seamonkey)

--- a/pt-BR/suite/chrome/common/dataman/dataman.properties
+++ b/pt-BR/suite/chrome/common/dataman/dataman.properties
@@ -10,6 +10,7 @@ cookies.secureOnly.all=Somente conexões criptografadas
 cookies.anyConnection.httponly=Qualquer tipo de conexão e sem acesso a script
 cookies.anyConnection.all=Qualquer tipo de conexão
 
+cookies.deleteSelected=Tem certeza de que deseja excluir os cookies selecionados?
 cookies.deleteSelectedTitle=Remover Cookies selecionados
 
 # permissions
@@ -18,7 +19,9 @@ perm.geo.label=Compartilhar localização
 perm.image.label=Carregar imagens
 perm.indexedDB.label=Armazenar bancos de dados locais
 perm.install.label=Instalar complementos
+perm.offline-app.label=Aplicações web offline
 perm.object.label=Executar plugins
+perm.password.label=Salvar senhas
 perm.plugins.label=Ativar plugins
 perm.popup.label=Abrir janelas popup
 perm.script.label=Executar scripts
@@ -32,9 +35,11 @@ pwd.hidePasswords=Esconder senhas
 pwd.showPasswords=Exibir senhas
 pwd.noMasterPasswordPrompt=Tem certeza que deseja exibir suas senhas?
 
+pwd.deleteSelected=Tem certeza de que deseja excluir as senhas selecionadas?
 pwd.deleteSelectedTitle=Remover as senhas selecionadas
 
 # preferences
+prefs.deleteSelected=Tem certeza de que deseja excluir as preferências selecionadas?
 prefs.deleteSelectedTitle=Remover as preferências selecionadas
 
 # storage
@@ -45,6 +50,7 @@ prefs.deleteSelectedTitle=Remover as preferências selecionadas
 #   %2$S = unit of measure (bytes, KB, MB, ...)
 storageUsage=%1$S %2$S
 
+storage.deleteSelectedTitle=Remover armazenamentos selecionados
 
 # form data
 
