--- a/pt-BR/suite/chrome/common/downloads/downloadmanager.properties
+++ b/pt-BR/suite/chrome/common/downloads/downloadmanager.properties
@@ -7,6 +7,8 @@ downloading=Baixando
 uploading=Enviando
 notStarted=Não iniciado
 failed=Falhou
+finished=Concluído
+canceled=Cancelado
 blocked=Bloqueado
 
 # LOCALIZATION NOTE (downloadsTitleFiles, downloadsTitlePercent): Semi-colon list of
@@ -24,6 +26,7 @@ progressTitle=%1$S - %2$S
 # %1$S is download percent, %2$S is the file name, %3$S is the download state
 # %% will appear as a single % sign, so %1$S%% is the percent number plus the % sign
 # examples: 42% of coolvideo.ogg - Paused; 98% of seamonkey-nightly.zip - Downloading
+progressTitlePercent=%1$S%% de %2$S - %3$S
 
 # LOCALIZATION NOTE (percentFormat): %1$S is download percent
 # %% will appear as a single % sign, so %1$S%% is the percent number plus the % sign
@@ -59,7 +62,11 @@ sizeSpeed=%1$S (%2$S)
 # LOCALIZATION NOTE (statusActive): — is the "em dash" (long dash)
 # %1$S download status; %2$S time remaining
 # example: Paused — 11 hours, 2 minutes remaining
+statusActive=%1$S — %2$S
 
 fromSource=De %S
+toTarget=Para %S
 
+fileExecutableSecurityWarning="%S" é um aplicativo. Tome cuidado, ele pode conter vírus ou instruções que podem danificar seu computador. Tem certeza que deseja executar "%S"?
+fileExecutableSecurityWarningTitle=Executar um aplicativo?
 fileExecutableSecurityWarningDontAsk=Não perguntar de novo
