--- a/pt-BR/suite/chrome/common/feeds/subscribe.properties
+++ b/pt-BR/suite/chrome/common/feeds/subscribe.properties
@@ -2,8 +2,11 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+subscribeNow=Inscrever-se agora
 chooseApplicationMenuItem=Escolher aplicativo…
 chooseApplicationDialogTitle=Escolher aplicativo
+alwaysUse=Sempre inscrever RSS no %S
+mediaLabel=Arquivos de mídia
 
 # LOCALIZATION NOTE: The next string is for the size of the enclosed media.
 #   e.g. enclosureSizeText : "50.23 MB"
@@ -11,16 +14,23 @@ chooseApplicationDialogTitle=Escolher aplicativo
 #   %2$S = unit of measure (bytes, KB, MB, ...)
 enclosureSizeText=%1$S %2$S
 
+bytes=bytes
 kilobytes=KB
+megabytes=MB
+gigabytes=GB
 
 # LOCALIZATION NOTE: The next three strings explains to the user what they're
 # doing.
 #   e.g. alwaysUseForVideoPodcasts : "Always use Miro to subscribe to video podcasts."
 #   %S = application to use (Miro, iTunes, ...)
+alwaysUseForFeeds=Sempre inscrever RSS no %S.
+alwaysUseForAudioPodcasts=Sempre inscrever podcasts no %S.
+alwaysUseForVideoPodcasts=Sempre inscrever videocasts no %S.
 
 
 
 
 # Protocol Handling
 # "Add %appName (%appDomain) as an application for %protocolType links?"
+addProtocolHandlerAddButton=Adicionar aplicativo
 # "%appName has already been added as an application for %protocolType links."
