--- a/pt-BR/suite/chrome/common/notification.properties
+++ b/pt-BR/suite/chrome/common/notification.properties
@@ -2,6 +2,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+outdatedpluginsMessage.title=Alguns dos plugins usados por esta página estão desatualizados.
 
 # LOCALIZATION NOTE (carbonfailurepluginsMessage.title):
 # The English form of this string used to use the word "requires" but it was
@@ -14,6 +15,12 @@ missingpluginsMessage.title=Plugins adicionais são requeridos para exibir todo 
 blockedpluginsMessage.title=Alguns plugins requeridos por esta página foram bloqueados para sua proteção.
 
 
+PluginVulnerableUpdatable=Este plugin é vulnerável e deve ser atualizado.
+PluginVulnerableNoUpdate=Este plugin tem vulnerabilidades de segurança.
+vulnerableUpdatablePluginWarning=Versão desatualizada!
+vulnerableNoUpdatePluginWarning=Plugin vulnerável!
+vulnerablePluginsMessage=Alguns plugins foram desativados para sua segurança.
+pluginInfo.unknownPlugin=Desconhecido
 
 # LOCALIZATION NOTE (popupWarning.message): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -33,11 +40,14 @@ xpinstallDisabledButton.accesskey=A
 # http://developer.mozilla.org/en/Localization_and_Plurals
 # The number of add-ons is not itself substituted in the string.
 addonDownloadCancelButton=Cancelar
+addonDownloadRestartButton=Reiniciar
 
 # LOCALIZATION NOTE (addonsInstalled, addonsInstalledNeedsRestart):
 # Semi-colon list of plural forms. See:
 # http://developer.mozilla.org/en/Localization_and_Plurals
 # #1 first add-on's name, #2 number of add-ons, #3 application name
+addonsInstalled=O #1 foi instalado.;#2 complementos foram instalados.
+addonsInstalledNeedsRestart=O #1 será instalado após o #3 ser reiniciado.;#2 complementos serão instalados após o #3 ser reiniciado.
 
 # LOCALIZATION NOTE (addonError-1, addonError-2, addonError-3, addonError-4, addonErrorIncompatible, addonErrorBlocklisted):
 # #1 is the add-on name, #2 is the host name, #3 is the application name
@@ -46,27 +56,36 @@ addonDownloadCancelButton=Cancelar
 # Light Weight Themes
 # LOCALIZATION NOTE (lwthemeInstallRequest.message): %S will be replaced with
 # the host name of the site.
+lwthemeInstallRequest.message=Este site (%S) tentou instalar um tema. Clique em aceitar para continuar.
 
+lwthemeInstallNotification.message=Um novo tema foi instalado.
 lwthemeInstallNotification.undoButton=Desfazer
+lwthemeInstallNotification.manageButton=Gerenciar temas…
 
 # LOCALIZATION NOTE (lwthemeNeedsRestart.message):
 # %S will be replaced with the new theme name.
+lwthemeNeedsRestart.restartButton=Reiniciar agora
 
 # Geolocation UI
 # LOCALIZATION NOTE (geolocation.shareLocation geolocation.dontShareThisRequest geolocation.alwaysShareForSite geolocation.neverShareForSite):
 #shareLocation is always visible, other entries are contextually relative to it
 #if this doesn't work for your language, use explicit Share or Allow/Block.
+geolocation.shareLocation=Compartilhar localização
 # LOCALIZATION NOTE (geolocation.learnMore): Use the unicode ellipsis char, \u2026,
 # or use "..." unless \u2026 doesn't suit traditions in your locale.
+geolocation.learnMore=Saiba mais…
 
 # Desktop Notifications
 # LOCALIZATION NOTE (webnotifications.showForSession webnotifications.dontShowThisSession webnotifications.alwaysShowForSite webnotifications.neverShowForSite):
 #showForSession is always visible, other entries are contextually relative to it
 #if this doesn't work for your language, use explicit Show or Allow/Block.
+webNotifications.showForSession=Mostrar notificações
 
 # IndexedDB
+offlineApps.never=Nunca para este site
 
 # Block autorefresh
+refreshBlocked.refreshLabel=O %S impediu esta página de recarregar automaticamente.
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
